--- a/web_server/html/main.css
+++ b/web_server/html/main.css
@@ -1,5 +1,5 @@
 :root {
-    --theme-color: #1976d2;
+    --theme-color: #106CC8;
 }
 body {
     font-size: 100%;
@@ -26,7 +26,7 @@ body {
 }
 #minimal .main-wrap {
     top: 0 !important;
-    padding-bottom: 20px;
+    padding-bottom: 60px;
 }
 #minimal #links, #minimal .main-header, #minimal footer {
     display: none;
@@ -42,7 +42,7 @@ nav {
     z-index: 100;
     top: 0;
     width: 100%;
-    background: #1976d2;
+    background: #106CC8;
 }
 nav::after {
     content: '';
@@ -101,7 +101,7 @@ nav .main-header {
     height: 30px;
     padding: 20px 87px;
     color: #fff;
-    background: #2196f3;
+    background: rgba(255, 255, 255, 0.1);
     -webkit-animation: fadein 0.5s;
     -moz-animation: fadein 0.5s;
     -ms-animation: fadein 0.5s;
@@ -198,21 +198,26 @@ nav .main-header {
     font-weight: 300;
 }
 .card-action {
-    padding: 16px 24px;
+    padding: 11px 14px;
     border-top: 1px solid rgba(0, 0, 0, 0.065);
     overflow: auto;
+    opacity: .99;
 }
-.card-action a {
-    color: #2196F3;
-    margin-right: 24px;
-    transition: color .2s ease;
-    text-transform: uppercase;
+.card-action a,
+.secondary {
+    color: #106CC8;
+    background: none;
+    box-shadow: none !important;
 }
 .card-action a.light {
     color: #333447;
 }
-.card-action a.light:hover {
+.card-action button.light:hover {
     color: #000;
+}
+.card-action a:hover,
+.secondary:hover {
+    background: rgba(25, 118, 210, .2);
 }
 .horizontal {
     height: 350px;
@@ -237,9 +242,6 @@ nav .main-header {
 .horizontal #logo-img svg {
     fill: #29363C;
     width: 40%;
-}
-.card-action a:hover {
-    color: #73c0fd;
 }
 @media (max-width:650px) {
     .horizontal {
@@ -469,7 +471,7 @@ img, nav, td {
 a, .a {
     cursor: pointer;
     text-decoration: none;
-    color: #2196f3;
+    color: #106CC8;
 }
 a:focus {
     outline: 0;
@@ -545,28 +547,34 @@ hr.small {
 
 /**************************** Buttons & checkboxes ****************************/
 .button, button, input[type='submit'] {
-    font-size: 1rem;
+    white-space: nowrap;
+    text-transform: uppercase;
+    font-weight: 500;
+    font-size: 14px;
     line-height: 36px;
     height: 36px;
-    padding: 0 1.5rem;
+    min-width: 88px;
+    text-align: center !important;
+    padding: 0 .6rem;
     cursor: pointer;
     transition: .3s ease;
-    transition: box-shadow .3s ease, background .3s ease;
+    transition: box-shadow .4s cubic-bezier(.25,.8,.25,1), background .4s ease;
     text-align: center;
     text-decoration: none;
     letter-spacing: .5px;
-    text-transform: uppercase;
-    color: #fff;
     border: none;
     border-radius: 2px;
     outline: 0;
-    background: #2196f3;
+    color: rgba(255,255,255,0.87);
+    background: rgb(16,108,200);
     display: inline-block;
     overflow: hidden;
 }
 .button:hover, button:hover, input[type='submit']:hover, .reboot:hover {
-    background: #1e88e5;
-    box-shadow: 0 5px 5px 0 rgba(0, 0, 0, .24), 0 1px 7px 0 rgba(0, 0, 0, .12), 0 3px 1px -1px rgba(0, 0, 0, .2);
+    background: rgb(1,89,162);
+}
+.button:active, button:active, input[type='submit']:active, .reboot:active {
+    box-shadow: 0 4px 8px 0 rgba(0,0,0,.4);
 }
 button:disabled, button:disabled:hover {
     background: rgba(0, 0, 0, .1);
@@ -586,16 +594,12 @@ input[type='file'] {
     cursor: pointer;
 }
 .secondary {
-    color: #2196f3;
+    color: #106CC8;
     background: none;
     box-shadow: none !important;
 }
 .secondary:hover {
     background: rgba(25, 118, 210, .2);
-}
-.attackBtn {
-    width: 110px;
-    padding: 0;
 }
 .redBtn {
     background: #f44336;
@@ -687,15 +691,15 @@ label {
     pointer-events: none;
     color: #f44336;
 }
-.settings .checkbox, #card-wrapper .checkbox {
+#settings .checkbox, #card-wrapper .checkbox {
     float: right;
 }
 input[type='checkbox'] {
     display: none;
 }
 input[type='checkbox']:checked + label {
-    border-color: #2196f3;
-    background: #2196f3;
+    border-color: #106CC8;
+    background: #106CC8;
 }
 input[type='checkbox']:checked + label:after {
     transform: scale(1.3);
@@ -723,7 +727,7 @@ label.checkbox:before {
     width: 200%;
     height: 200%;
     content: '';
-    transition: .2s ease;
+    transition: .3s ease;
     border-radius: 50%;
 }
 label.checkbox:after {
@@ -748,7 +752,7 @@ label.checkbox:active:before,
     float: left;
     margin-right: 10px;
 }
-.row.inputCheckbox label:not(.checkbox), .settings  label:not(.checkbox), #card-wrapper label:not(.checkbox) {
+.row.inputCheckbox label:not(.checkbox), #settings label:not(.checkbox), #card-wrapper label:not(.checkbox) {
     line-height: 18px;
 }
 
@@ -823,13 +827,17 @@ footer a {
     cursor: pointer;
     transition: background .3s ease;
     pointer-events: initial;
-    background: #2196f3;
+    background: rgb(16,108,200);
+    fill: rgba(255,255,255,0.9);
 }
 .reboot-inner {
     transition: box-shadow .3s ease, background .3s ease;
     border-radius: 1000px;
 }
-.shadow, .reboot-inner, #notification, .button, button, input[type='submit'], input[type='reset'], input[type='button'], .card-small {
+.button, button, input[type='submit'] {
+    box-shadow: 0 2px 5px 0 rgba(0,0,0,.26);
+}
+.shadow, .reboot-inner, #notification,.card-small {
     box-shadow: 0 2px 2px 0 rgba(0, 0, 0, .14), 0 1px 5px 0 rgba(0, 0, 0, .12), 0 3px 1px -2px rgba(0, 0, 0, .2);
 }
 .reboot-container {
@@ -986,7 +994,7 @@ footer a {
     font-size: 1.3rem;
     height: 100%;
     line-height: inherit;
-    margin-right: 25px;
+    margin: 0 16px 0 12px;
     float: left;
     position:relative;
 }
@@ -1041,9 +1049,12 @@ footer a {
     }
 }
 @media (min-width:800px) {
-    .card-container.settings {
+    #settings .card-container {
         display: inline-block;
         width: calc(50% - 45px);
+    }
+    #settings .dual {
+        width: calc(100% - 45px);
     }
     .card-container, .card-container {
         margin: 20px;
@@ -1281,6 +1292,12 @@ footer a {
 }
 .waves-effect.waves-dark .waves-ripple {
     background: rgba(0, 0, 0, .2)
+}
+.waves-effect.waves-blue .waves-ripple {
+    background: rgba(16, 108, 200, .3)
+}
+.waves-effect.waves-light-blue .waves-ripple {
+    background: rgba(198, 227, 255, 0.3)
 }
 .waves-effect.waves-classic .waves-ripple {
     background: rgba(0, 0, 0, .2)
