--- a/web_server/html/dark.css
+++ b/web_server/html/dark.css
@@ -1,172 +1,169 @@
 #logo-img {
-    background: none
+	background: none
 }
 #nav {
-    background: #1b1b21
+	background: #1b1b21
 }
 body {
-    color: #fff;
-    background: #28282e !important
+	color: #fff;
+	background: #28282e !important
 }
 nav .main-header {
-    background: #1b1b21 !important
+	background: #1b1b21 !important
 }
 .button, button, input[type='submit'], .reboot {
-    background: #61616f
+	background: #61616f
 }
 .button:hover, button:hover, input[type='submit']:hover, .reboot:hover {
-    background: #6c6c79
+	background: #6c6c79
 }
 .secondary, .card-action a {
-    color: #8aa0d4 !important;
-    background: transparent;
+	color: #8aa0d4 !important;
+	background: transparent;
 }
-.card-action a:hover,
-.secondary:hover {
-    background: rgba(255,255,255, .03);
+.card-action a:hover, .secondary:hover {
+	background: rgba(255, 255, 255, .03);
 }
 *, .input-container label {
-    color: #dadada
+	color: #dadada
 }
 .settingsHeader, .settingsHeader *, .main-wrap, .WiFi span, td, th, .input-container input:valid + label, .input-container input:invalid:not(:placeholder-shown) + label, .input-container input:focus + label {
-    color: #dadada !important
+	color: #dadada !important
 }
 #apMAC {
-    background: rgba(255, 255, 255, .1)
+	background: rgba(255, 255, 255, .1)
 }
 .card, .card-small {
-    background: #37373d
+	background: #37373d
 }
 .WiFi svg {
-    fill: #fff
+	fill: #fff
 }
 .WiFi span:nth-child(1) {
-    box-shadow: inset 0 0 15px rgba(0, 0, 0, .15), 0 0 4px rgba(0,0,0,.15);
-    -webkit-filter: initial;
-    filter: initial;
+	box-shadow: inset 0 0 15px rgba(0, 0, 0, .15), 0 0 4px rgba(0, 0, 0, .15);
+	-webkit-filter: initial;
+	filter: initial;
 }
 .WiFi span:nth-child(2) {
-    -webkit-filter: none;
-    filter: none;
-    opacity: 1;
-    text-shadow: 0px 0px 7px rgba(0,0,0,.5);
-    font-weight: 400
+	-webkit-filter: none;
+	filter: none;
+	opacity: 1;
+	text-shadow: 0px 0px 7px rgba(0, 0, 0, .5);
+	font-weight: 400
 }
 label.checkbox {
-    border-color: #e1e1e1
+	border-color: #e1e1e1
 }
 input[type='checkbox']:checked + label {
-    border-color: #8b8b92;
-    background: #8b8b92
+	border-color: #8b8b92;
+	background: #8b8b92
 }
 #spinner-container {
-    background: #3e3e3e
+	background: #3e3e3e
 }
 .edit {
-    color: #dadada
+	color: #dadada
 }
 .edit svg {
-    fill: #dadada
+	fill: #dadada
 }
 .input-container input:placeholder-shown {
-    border-color: #dadada
+	border-color: #dadada
 }
 .input-container input:focus {
-    border-color: #fff !important
+	border-color: #fff !important
 }
 footer {
-    background: #2a2a31
+	background: #2a2a31
 }
 h1 {
-    color: rgba(255, 255, 255, .66)
+	color: rgba(255, 255, 255, .66)
 }
-a,
-.a {
-    color: #8aa0d4
+a, .a {
+	color: #8aa0d4
 }
 .light-6 {
-    opacity: .4;
+	opacity: .4;
 }
 :root {
-    --theme-color: #1b1b21
+	--theme-color: #1b1b21
 }
 @media (min-width:520px) {
-    ::-webkit-scrollbar {
-        width: 14px;
-        background-color: #28282E
-    }
-    ::-webkit-scrollbar-thumb {
-        background-color: #4b4b54
-    }
-    ::-webkit-scrollbar-thumb:hover {
-        background-color: #51515a
-    }
-    ::-webkit-scrollbar-thumb:active, ::-webkit-scrollbar-thumb:disabled {
-        background-color: #393942
-    }
-    ::-webkit-scrollbar-button {
-        display: none;
-        width: 0;
-        height: 0
-    }
-    ::-webkit-scrollbar-corner {
-        background-color: transparent
-    }
+	::-webkit-scrollbar {
+		width: 14px;
+		background-color: #28282E
+	}
+	::-webkit-scrollbar-thumb {
+		background-color: #4b4b54
+	}
+	::-webkit-scrollbar-thumb:hover {
+		background-color: #51515a
+	}
+	::-webkit-scrollbar-thumb:active, ::-webkit-scrollbar-thumb:disabled {
+		background-color: #393942
+	}
+	::-webkit-scrollbar-button {
+		display: none;
+		width: 0;
+		height: 0
+	}
+	::-webkit-scrollbar-corner {
+		background-color: transparent
+	}
 }
 .input-container input:placeholder-shown {
-    border-bottom: 2px solid #47474e !important;
+	border-bottom: 2px solid #47474e !important;
 }
 .input-container input:valid {
-    border-bottom: 2px solid #47474e !important;
+	border-bottom: 2px solid #47474e !important;
 }
 .input-container input:invalid {
-    border-bottom: 2px solid #47474e !important;
+	border-bottom: 2px solid #47474e !important;
 }
 .input-container input:focus {
-    border-bottom: 2px solid #606065 !important;
+	border-bottom: 2px solid #606065 !important;
 }
 nav #links a.active::before {
-    background: #dadada
+	background: #dadada
 }
 .green {
-    color: #4caf50 !important
+	color: #4caf50 !important
 }
 .red {
-    color: #f5716e !important
+	color: #f5716e !important
 }
 .s-s {
-    background: #709bbd
+	background: #709bbd
 }
 .s-s .row * {
-    color: #d5edff
+	color: #d5edff
 }
 hr {
-    border: 1px solid rgba(0, 0, 0, .1)
+	border: 1px solid rgba(0, 0, 0, .1)
 }
 #notification {
-    background: #61616f
+	background: #61616f
 }
 .glitch {
-    color: red !important
+	color: red !important
 }
 .glitch:after {
-    color: red !important;
-    background: #37373D !important;
-    text-shadow: -4px 0 green !important
+	color: red !important;
+	background: #37373D !important;
+	text-shadow: -4px 0 green !important
 }
 .glitch:before {
-    color: red !important;
-    background: #37373D !important;
-    text-shadow: 4px 0 blue !important
+	color: red !important;
+	background: #37373D !important;
+	text-shadow: 4px 0 blue !important
 }
 .samddAttrib span {
-    color: #ffdccc !important
+	color: #ffdccc !important
 }
 .samddAttrib span a {
-    font-weight: bold;
-    color: #ffbea1 !important
+	font-weight: bold;
+	color: #ffbea1 !important
 }
-.waves-effect.waves-light-blue .waves-ripple,
-.waves-effect.waves-blue .waves-ripple {
-    background: rgba(255,255,255, 0.15)
+.waves-effect.waves-light-blue .waves-ripple, .waves-effect.waves-blue .waves-ripple {
+	background: rgba(255, 255, 255, 0.15)
 }
