[+] `Change server IP` item

--- a/android_app/app/src/main/res/menu/main.xml
+++ b/android_app/app/src/main/res/menu/main.xml
@@ -2,8 +2,13 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
-        android:id="@+id/action_settings"
+        android:id="@+id/action_serveraddress"
         android:orderInCategory="100"
-        android:title="@string/action_settings"
+        android:title="@string/action_serveraddress"
+        app:showAsAction="never" />
+    <item
+        android:id="@+id/action_openbrowser"
+        android:orderInCategory="101"
+        android:title="@string/action_openbrowser"
         app:showAsAction="never" />
 </menu>
