--- a/web_server/html/dark.scss
+++ b/web_server/html/dark.scss
@@ -1,3 +1,5 @@
+---
+---
 #logo-img {
 	background: none
 }
@@ -166,4 +168,18 @@ hr {
 }
 .waves-effect.waves-light-blue .waves-ripple, .waves-effect.waves-blue .waves-ripple {
 	background: rgba(255, 255, 255, 0.15)
+}
+.card-header {
+	svg {
+		fill: rgba(255, 255, 255, 0.6);
+		&:hover {
+			background: rgba(255, 255, 255, 0.05);
+		}
+	}
+}
+.horizontal #logo-img {
+	background: rgba(0, 0, 0, 0.06);
+	svg {
+		fill: rgba(255, 255, 255, 0.62)
+	}
 }
