--- a/web_server/html/_layouts/page.html
+++ b/web_server/html/_layouts/page.html
@@ -2,7 +2,7 @@
 	<title>{{page.title}} - Wi-PWN</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=0">
 	<link rel="stylesheet" href="./main.css">
-	<link rel="stylesheet" href="./dark.css">
+	<link rel="stylesheet" href="./dark.css" id="darkStyle">
 	<meta name="theme-color" content="#106CC8">
 </head>
 
