--- a/web_server/html/dark.scss
+++ b/web_server/html/dark.scss
@@ -166,7 +166,7 @@ hr {
 	font-weight: bold;
 	color: #ffbea1 !important
 }
-.waves-effect.waves-light-blue .waves-ripple, .waves-effect.waves-blue .waves-ripple {
+.waves-effect.waves-light-color .waves-ripple, .waves-effect.waves-color .waves-ripple {
 	background: rgba(255, 255, 255, 0.15)
 }
 .card-header {
