--- a/web_server/html/_layouts/page.html
+++ b/web_server/html/_layouts/page.html
@@ -1,4 +1,5 @@
 <head>
+	<meta charset="UTF-8">
 	<title>{{page.title}} - Wi-PWN</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=0">
 	<link rel="stylesheet" href="./main.css">
