--- a/web_server/html/_includes/nav.html
+++ b/web_server/html/_includes/nav.html
@@ -4,12 +4,12 @@
 	</div>
 
 	<div id="links">
-		<a href="./"{% if page.url == "/" %} class="active"{% endif %}>Scan</a>
-		<a href="./users"{% if page.url == "/users.html" %} class="active"{% endif %}>Users</a>
-		<a href="./attack"{% if page.url == "/attack.html" %} class="active"{% endif %}>Attack</a>
-		<a href="./detector"{% if page.url == "/detector.html" %} class="active"{% endif %}>Detector</a>
-		<a href="./settings"{% if page.url == "/settings.html" %} class="active"{% endif %}>Settings</a>
-		<a href="/info" class="right{% if page.url == "/info.html" %} active{% endif %}">Info</a>
+		<a href="./"{% if page.url == "/" %} class="active"{% endif %}>{% t nav.scan %}</a>
+		<a href="./users"{% if page.url == "/users.html" %} class="active"{% endif %}>{% t nav.users %}</a>
+		<a href="./attack"{% if page.url == "/attack.html" %} class="active"{% endif %}>{% t nav.attack %}</a>
+		<a href="./detector"{% if page.url == "/detector.html" %} class="active"{% endif %}>{% t nav.detector %}</a>
+		<a href="./settings"{% if page.url == "/settings.html" %} class="active"{% endif %}>{% t nav.settings %}</a>
+		<a href="/info" class="right{% if page.url == "/info.html" %} active{% endif %}">{% t nav.info %}</a>
 	</div>
 </nav>
 
