--- a/web_server/html/main.scss
+++ b/web_server/html/main.scss
@@ -422,7 +422,7 @@ table tr {
 }
 
 table tr:nth-child(1) th {
-	font-family: 'Roboto Medium';
+	font-family: 'Roboto Medium', Roboto, RobotoDraft, Helvetica, Arial, sans-serif;
 	font-size: .87rem;
 	font-weight: 500;
 	padding: 15px;
