--- a/web_server/html/_includes/nav.html
+++ b/web_server/html/_includes/nav.html
@@ -9,7 +9,7 @@
 		<a href="./attack"{% if page.url == "/attack.html" %} class="active"{% endif %}>{% t nav.attack %}</a>
 		<a href="./detector"{% if page.url == "/detector.html" %} class="active"{% endif %}>{% t nav.detector %}</a>
 		<a href="./settings"{% if page.url == "/settings.html" %} class="active"{% endif %}>{% t nav.settings %}</a>
-		<a href="/info" class="right{% if page.url == "/info.html" %} active{% endif %}">{% t nav.info %}</a>
+		<a href="./info" class="right{% if page.url == "/info.html" %} active{% endif %}">{% t nav.info %}</a>
 	</div>
 </nav>
 
