--- a/web_server/html/_layouts/page.html
+++ b/web_server/html/_layouts/page.html
@@ -1,20 +1,10 @@
-<head>
-	<meta charset="UTF-8">
-	<title>{% t page.title %} - Wi-PWN</title>
-	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=0">
-	<link rel="stylesheet" href="./main.css">
-	<link rel="stylesheet" href="./dark.css" id="darkStyle">
-	<meta name="theme-color" content="#106CC8">
-</head>
-
-<body>
-	{% include nav.html %}
-	<div class="main-wrap">
-		{% if page.no-container == null %}<div class="container">{% endif %}
-			{{ content }}
-		{% if page.no-container == null %}</div>{% endif %}
-		{% include footer.html %}
-	</div>
-</body>
-
-</html>
+---
+layout: html
+---
+{% include nav.html %}
+<div class="main-wrap">
+	{% if page.no-container == null %}<div class="container">{% endif %}
+		{{ content }}
+	{% if page.no-container == null %}</div>{% endif %}
+	{% include footer.html %}
+</div>
