Change background color
Change BG color to full black, very good on AMOLED screen (or maybe create a separate option to enable that)

--- a/web_server/html/dark.scss
+++ b/web_server/html/dark.scss
@@ -8,7 +8,7 @@
 }
 body {
 	color: #fff;
-	background: #28282e !important
+	background: #000000 !important
 }
 nav .main-header {
 	background: #1b1b21 !important
