:chart_with_upwards_trend: Analytics

--- a/web_server/html/_layouts/html.html
+++ b/web_server/html/_layouts/html.html
@@ -11,5 +11,6 @@
 <body>
 	{{ content }}
 </body>
-
+{% if jekyll.environment == "development" %}<script>var sc_project=11368832,sc_invisible=0,sc_security="a7433704",sc_https=1,scJsHost="https:"==document.location.protocol?"https://secure.":"http://www.";document.write("<script type='text/javascript' src='"+scJsHost+"statcounter.com/counter/counter.js'><\/script>")</script><noscript><div class=statcounter><a href=http://statcounter.com/ target=_blank title="Web Analytics"><img alt="Web
+Analytics"class=statcounter src=//c.statcounter.com/11368832/0/a7433704/0/ ></a></div></noscript>{% endif %}
 </html>
