:cloud: https://widgetbot.io Discord chat integration

--- a/web_server/html/_layouts/html.html
+++ b/web_server/html/_layouts/html.html
@@ -6,6 +6,17 @@
 	{% if page.url != "/setup.html" %}<link rel="stylesheet" href="./dark.css" id="darkStyle">{% endif %}
 	<meta name="theme-color" content="#106CC8">
 	{% if jekyll.environment == "development" %}<script src="./debugger.js"></script>{% endif %}
+	<script src="https://crate.widgetbot.io/v2" defer async>
+		new Crate({
+			server: '335836376031428618',
+			channel: '335836408918966273',
+			beta: true,
+			position: {
+				x: 'left',
+				y: 'bottom'
+			}
+		})
+	</script>
 </head>
 
 <body>
